# Copyright 2021 The GPGMM Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../build_overrides/gpgmm_overrides_with_defaults.gni")

import("//build_overrides/build.gni")

# This GN file is discovered by all GN builds, but utils doesn't support
# all of OSes so we explicitly make the target visible only on
# OSs we know utils supports.
if (is_win || is_linux || is_chromeos || is_mac || is_fuchsia || is_android) {
  source_set("gpgmm_utils_sources") {
    sources = [
      "Assert.cpp",
      "Assert.h",
      "Compiler.h",
      "Flags.h",
      "JSONEncoder.cpp",
      "JSONEncoder.h",
      "Limits.h",
      "LinkedList.h",
      "Log.cpp",
      "Log.h",
      "Math.cpp",
      "Math.h",
      "Platform.h",
      "PlatformDebug.h",
      "PlatformTime.cpp",
      "PlatformTime.h",
      "PlatformUtils.cpp",
      "PlatformUtils.h",
      "RefCount.cpp",
      "RefCount.h",
      "StableList.h",
      "Utils.cpp",
      "Utils.h",
    ]

    if (is_win) {
      sources += [
        "WindowsPlatformDebug.cpp",
        "WindowsTime.cpp",
        "WindowsUtils.cpp",
        "WindowsUtils.h",
      ]
    }

    configs += [ "${gpgmm_root_dir}/src/gpgmm/common:gpgmm_common_config" ]
  }
}
